# zk-fun

./: Cargo.toml
src/: lib.rs
src/gkr/: mod.rs
src/lagrange/: mod.rs  multivariate.rs  univariate.rs
src/sumcheck/: mod.rs  util.rs
